bookmarks: fixed populating TitledUrlIndex on load

This is a regression from recent refactoring. The TitledUrlIndex was
not being populated on load, resulting in the omnibox not properly
surfacing bookmarks.

BUG=841375
TEST=covered by test

Change-Id: I4fe924e7679f3591e5d8ad18afbfb6fdc3fdc3d4
Reviewed-on: https://chromium-review.googlesource.com/1058278
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558568}
Former-commit-id: ae91f34a8ca86a39631da150baca0e7e78f33dd2